@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)nii.c	1.42 (gritter) 8/12/06
+ * Sccsid @(#)nii.c	1.43 (gritter) 9/9/06
  */
 
 /*
@@ -135,8 +135,6 @@ int	wbfi;
 int	vflag;
 int	noscale;
 int	po1;
-int	nlist[NTRAP];
-int	mlist[NTRAP];
 int	ev;
 int	tty;
 int	sfont	= FT;	/* appears to be "standard" font; used by .ul */
