@@ -1,6 +1,9 @@
 Release ...
 * [nt]roff: The ".pull" request has been introduced to print text of a given
   height from a diversion and remove it afterwards.
+* [nt]roff: The ".dwh" and ".dch" requests have been introduced to allow
+  multiple diversion traps in the same diversion.
+* [nt]roff: The "\n[.dilev]" register contains the current diversion level.
 * tbl: Can now optionally use graphic drawing commands (troff "\D") instead
   of repeated-character line drawing (troff "\l" and "\L"). The "graphics"
   option enables it per table, and the "-g" command line option enables it
